# motionbench-xai

./: .gitignore  .pre-commit-config.yaml  =0.4.0  =0.9  AGENTS.md  AGENT_PLAN_motionbench.md  BACKLOG.md  README.md  REPRODUCIBILITY.md  TASKS.md  conda-environment-imputer.yml  conda-environment.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: config.yaml
configs/classifiers/: bilstm.yaml  motionagformer.yaml  motionbert.yaml  poseformerv2.yaml  potr.yaml  synthetic_cnn.yaml  synthetic_mlp.yaml  synthetic_transformer.yaml
configs/data/: burr_m10.yaml  burr_m5.yaml  care_pd_bmclab.yaml  care_pd_bmclab_cache.yaml  gait_periodic.yaml  gaussian_k4.yaml  gaussian_k8.yaml  joint_subset_skeleton.yaml  low_rank_manifold.yaml  ptbxl.yaml  skeleton_gait_combined.yaml  skeleton_structured.yaml  window_label_gaussian.yaml  xor_label_gaussian.yaml
configs/experiments/: care_pd_sweep.yaml  full_synthetic_sweep.yaml  learned_imputer_sweep.yaml  overnight_synthetic_sweep.yaml  player_imputer_2x2.yaml  skeleton_gait_combined_full.yaml  skeleton_gait_combined_offmanifold.yaml  skeleton_gait_grad_temp.yaml
configs/methods/: deeplift.yaml  gradcam.yaml  gradientshap.yaml  ig_mean.yaml  ig_zero.yaml  kernelshap_empirical.yaml  kernelshap_flow.yaml  kernelshap_marginal.yaml  kernelshap_mean.yaml  kernelshap_oracle.yaml  kernelshap_oracle_spatial.yaml  kernelshap_temporal.yaml  kernelshap_vaeac.yaml  kernelshap_vaeac_spatial.yaml  kernelshap_zero.yaml  kernelshap_zero_spatial.yaml  lrp.yaml  shats.yaml  smoothgrad.yaml  timeshap.yaml  train_flow.yaml  train_vaeac.yaml  windowshap.yaml  windowshap_dynamic.yaml  windowshap_stationary.yaml
docs/: SOURCE_MAP.md  architecture.md
examples/: smoke_test.py
paper/: 01-introduction.tex  02-related (2).tex  02-related.tex  03-background (1).tex  03-background.tex  04-methods (4).tex  04-methods.tex  05-results.tex  05-results_synth.tex  06-results-real.tex  main.aux  main.bbl  main.blg  main.out  main.tex  new_introduction.tex  references (1).bib  references.bib
scripts/: _run_one_cell.py  build_burr_caches.py  build_ptbxl_cache.py  build_skeleton_gait_cache.py  build_synthetic_imputer_caches.py  compute_carepd_aopc_significance.py  compute_esc50_summary.py  compute_ptbxl_cis.py  compute_real_cis.py  compute_real_cis_multiclf.py  configure_paths.sh  framework_2x2.py  generate_paper_tables.py  preprocess_esc50.py  recompute_fixed_deletion_metrics.py  recompute_new_metrics.py  recompute_pxflip.py  reproduce_ptbxl.sh  reproduce_real.sh  reproduce_synthetic.sh  restore_contaminated_n50.py  run_care_pd_extended.py  run_care_pd_multiclf.py  run_care_pd_sweep.py  run_esc50_freq_shap.py  run_esc50_shap.py  run_full_benchmark.sh  run_gradient_fair_metric.py  run_m_ablation.py  run_nk_ablation.py  run_oracle_metrics_fast.py  run_oracle_nmc200.py  run_package_temporal_shap.py  run_player_set_ablation.py  run_player_set_budget.py  run_ptbxl_leads_shap.py  run_ptbxl_shap.py  run_scalability_test.py  run_temporal_shap_multigpu.py  run_windowshap_diag.py  (+8 more)
tasks/: TASK_1A.md  TASK_1B.md  TASK_1C.md  TASK_1D.md  TASK_2A.md  TASK_2B.md  TASK_2C.md  TASK_2D.md  TASK_2E.md  TASK_3A.md  TASK_3B.md  TASK_3C.md  TASK_3D.md  TASK_4A.md  TASK_4B.md  TASK_5A.md  TASK_5B.md  TASK_5C.md  TASK_5D.md  TASK_6A.md  TASK_6B.md
tests/: conftest.py  test_attribution_contract.py  test_cam.py  test_captum_methods.py  test_care_pd.py  test_coalitions.py  test_copula_oracle.py  test_data_contract.py  test_empirical_imputers.py  test_fidelity.py  test_flow.py  test_gaussian_oracle.py  test_gt_metrics.py  test_imputers_contract.py  test_kernel_shap.py  test_label_functions.py  test_lrp.py  test_metrics_contract.py  test_off_manifold_imputers.py  test_oracles_contract.py  test_pipelines.py  test_players_contract.py  test_stability_sanity.py  test_structured_synthetics.py  test_synthetic_classifiers.py  test_temporal_shap.py  test_vaeac.py
(+92 files in other folders)
