[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "motionbench-xai"
version = "0.0.0"
description = "MotionBench-XAI: A benchmark for time-series XAI methods on motion data"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "MotionBench-XAI Authors" }]

dependencies = [
    # Deep learning
    "torch>=2.1,<3.0",
    "torchvision>=0.16,<1.0",
    # XAI libraries — wrap, do not re-implement
    "captum>=0.7.0",
    "shap>=0.46.0",
    "quantus>=0.5.5",
    "zennit>=0.4.6",
    # Time-series SHAP wrappers
    "timeshap>=0.4.0",
    # Empirical / copula imputers
    "pyvinecopulib>=0.6.3",
    # Scientific computing
    "numpy>=1.26,<2.1",
    "scipy>=1.11",
    "scikit-learn>=1.4",
    # Config + experiment tracking
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "wandb>=0.17",
    # Data processing
    "pandas>=2.1",
    "einops>=0.7",
    # Time-series baselines
    "aeon>=0.9",
    # Utilities
    "tqdm>=4.66",
    "joblib>=1.3",
    "rich>=13.0",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5",
    "ruff>=0.4.0",
    "mypy>=1.9",
    "pre-commit>=3.7",
    "types-tqdm",
]

[project.scripts]
motionbench = "motionbench.cli.run:main"

# ---------------------------------------------------------------------------
# Tool configs
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [
    ".git", ".venv", "__pycache__", "build", "dist",
    "motionbench/classifiers/ported_care_pd",  # ported code; lint separately
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "TCH", "ANN"]
ignore = [
    "ANN101",  # missing type annotation for self
    "ANN102",  # missing type annotation for cls
    "ANN401",  # dynamically typed expressions (Any) are disallowed
    "B008",    # function call in default argument
    "N803",    # argument name should be lowercase (physics notation)
    "N806",    # variable in function should be lowercase (physics notation)
    "E501",    # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "S101", "I001", "F401", "UP037", "SIM118"]  # no annotations; pre-existing style
"examples/*" = ["ANN", "T201", "UP037"]  # no annotations + allow print
"scripts/*" = ["ANN", "T201"]
# Frozen Phase-0 base ABCs — cannot be modified; suppress legacy style issues.
"motionbench/*/base.py" = ["UP035", "UP037", "TC002", "TC003", "TC005", "UP045", "F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = [
    "motionbench/classifiers/ported_care_pd/",
    "tests/",
    "examples/",
    "scripts/",
]

# Frozen Phase-0 base ABCs cannot be modified; suppress warn_unused_ignores there.
[[tool.mypy.overrides]]
module = [
    "motionbench.data.base",
    "motionbench.attribution.base",
    "motionbench.imputers.base",
    "motionbench.metrics.base",
    "motionbench.oracles.base",
    "motionbench.players.base",
]
warn_unused_ignores = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with -m 'not slow')",
    "gpu: marks tests requiring a GPU",
    "manual: marks tests meant to be run manually, not in CI",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning:torch",
]

[tool.coverage.run]
source = ["motionbench"]
omit = ["motionbench/classifiers/ported_care_pd/*", "tests/*"]

[tool.setuptools.packages.find]
where = ["."]
include = ["motionbench*"]
